fix: Meter align with "zero"

--- a/src/assets/css/Channel.css
+++ b/src/assets/css/Channel.css
@@ -168,7 +168,7 @@
 .channel-settings {
     position: absolute;
     top: 5px;
-    left: 9px;
+    left: -3px;
     background: none;
     border: none;
     outline: none;
