--- a/src/assets/css/VuMeter.css
+++ b/src/assets/css/VuMeter.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 30px;
     width: 30px;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: 2px;
     background-color: black;
     border-radius: 7px;
